--- a/Payment.html
+++ b/Payment.html
@@ -122,7 +122,7 @@
 
 <body>
   <div class="after">
-    <h1>Thank You<br>You Order is done<br>You can take it after 15 min!!</h1>
+    <h1>Thank You<br>Your Order is done<br>You can take it after 15 min!!</h1>
   </div>
   <div class="before">
     <h1 id="payment-amount"></h1>
