--- a/contact.html
+++ b/contact.html
@@ -51,7 +51,7 @@ alert("Your request is registred.");
           <input type="text" placeholder="Email" required class="data">
         </div>
         <div class="input-box message-box">
-        Enter your message:</br><textarea rows="10" cols="50" required class="data"></textarea>
+        Enter your message:</br><textarea name="Message" rows="10" cols="50" required class="data"></textarea>
         </div>
         <div class="button">
           <input type="submit" value="Send Now">
